# python-project-lvl1

./: .gitignore  .pyproject.toml.swp  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: README.md  pyci.yml
brain_games/: __init__.py  brain_calc.py  brain_even.py  cli.py  engine.py  even_odd_game.py
brain_games/engine/: engine.py
brain_games/games/: __init__.py  brain_calc.py  brain_even.py  calc.py  calc_game.py  even_odd.py  even_odd_game.py  functions.py  gcd.py  gcd_game.py  prime.py  prime_game.py  progression.py  progression_game.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
